--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BackEnd
 
 #Database settings
-spring.datasource.url=jdbc:mysql://root:PseIcwGxDRkCxAVBxGHFYlufFKZvDMck@shinkansen.proxy.rlwy.net:27327/railway?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=PseIcwGxDRkCxAVBxGHFYlufFKZvDMck
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
