--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=BackEnd
 
 #Database settings
-spring.datasource.url=jdbc:mysql://root:PseIcwGxDRkCxAVBxGHFYlufFKZvDMck@shinkansen.proxy.rlwy.net:27327/railway?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://root:jfkGaWsLPDtOIiicyzKCxgAWnWPrBtnw@trolley.proxy.rlwy.net:31775/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=PseIcwGxDRkCxAVBxGHFYlufFKZvDMck
+spring.datasource.password=jfkGaWsLPDtOIiicyzKCxgAWnWPrBtnw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.generate-ddl=true
 
 #JPA Settings
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 
