--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=BackEnd
+server.port=${PORT:8080}
 
 #Database settings
 spring.datasource.url=jdbc:mysql://root:jfkGaWsLPDtOIiicyzKCxgAWnWPrBtnw@trolley.proxy.rlwy.net:31775/railway?createDatabaseIfNotExist=true
