--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=BackEnd
-server.port=${PORT:8080}
 
 #Database settings
-spring.datasource.url=jdbc:mysql://root:jfkGaWsLPDtOIiicyzKCxgAWnWPrBtnw@trolley.proxy.rlwy.net:31775/railway?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/needitdonedb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=jfkGaWsLPDtOIiicyzKCxgAWnWPrBtnw
+spring.datasource.password=Ijse@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.generate-ddl=true
