--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.mail.port=587
 spring.mail.username=yourmail@gmail.com
 spring.mail.password=#### #### #### ####
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=truez
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 
